# Sentiment-Classification

./: README.md
sentiment-classification/: .gitignore  pyproject.toml
sentiment-classification/sentiment_classification/: main.py
sentiment-classification/sentiment_classification/config/: config.py  mongodb.py
sentiment-classification/sentiment_classification/database/: __init__.py  database.py
sentiment-classification/sentiment_classification/models/: bert.py  comment.py
sentiment-classification/sentiment_classification/notebooks/: Sentiment_Classification.ipynb  test.ipynb
sentiment-classification/sentiment_classification/predict/: __init__.py  predict.py
sentiment-classification/sentiment_classification/routes/: comment.py
sentiment-classification/sentiment_classification/schemas/: comment.py
sentiment-classification/sentiment_classification/static/: style.css
sentiment-classification/sentiment_classification/templates/: index.html
sentiment-classification/tests/: test_sentiment_classification.py
