[tool.poetry]
name = "sentiment-classification"
version = "0.1.0"
description = ""
authors = ["hanahh080601 <hanlehngoc080601@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.15.1"
torch = "^1.12.0"
pytorch-lightning = "^1.6.5"
transformers = "^4.20.1"
pandas = "^1.4.3"
pydantic = "^1.9.1"
fastapi = "^0.109.1"
pymongo = {extras = ["srv"], version = "^4.1.1"}
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
